# srcmap

./: .clippy.toml  .fallowrc.json  .gitignore  .oxlintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  _typos.toml  coverage.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  rust-coverage.json
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: binding-manifest-policy.mjs  binding-manifest-policy.test.mjs  check-napi-declarations.mjs  check-napi-declarations.test.mjs  generate-benchmark-matrix.mjs  publish-crate-if-needed.sh  publish-crate-if-needed.test.mjs  workflow-policy.test.mjs
.github/workflows/: bench.yml  ci.yml  coverage.yml  release-drafter.yml  release.yml  stale.yml
benchmarks/: codec.mjs  codspeed.mjs  download-fixtures.mjs  fallow-cloud-coverage.mjs  package-lock.json  package.json  real-world.mjs  sourcemap-wasm.mjs  sourcemap.mjs  workload.mjs  workload.test.mjs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/cli/tests/fixtures/: invalid.js.map  scoped.js.map  second.js.map  simple.js.map  stacktrace.txt  webpack.js.map
crates/codec/: Cargo.toml  README.md
crates/codec/benches/: vlq.rs  vlq_parallel.rs
crates/codec/examples/: roundtrip.rs  vlq_primitives.rs
crates/codec/src/: decode.rs  encode.rs  lib.rs  vlq.rs
crates/generator/: Cargo.toml  README.md
crates/generator/benches/: generate.rs  generate_parallel.rs
crates/generator/examples/: compiler_output.rs  streaming.rs
crates/generator/src/: lib.rs
crates/hermes/: Cargo.toml  README.md
crates/hermes/src/: lib.rs
crates/ram-bundle/: Cargo.toml  README.md
crates/ram-bundle/src/: lib.rs
crates/remapping/: Cargo.toml  README.md
crates/remapping/benches/: remap.rs
crates/remapping/examples/: bundler_concat.rs  composition.rs
crates/remapping/src/: lib.rs
crates/scopes/: Cargo.toml  README.md
crates/scopes/examples/: debug_scopes.rs
crates/scopes/src/: decode.rs  encode.rs  lib.rs
crates/sourcemap/: Cargo.toml  README.md
crates/sourcemap/benches/: parse.rs
crates/sourcemap/examples/: consumer.rs  lazy_sourcemap.rs
crates/sourcemap/src/: js_identifiers.rs  lib.rs  offset_lookup.rs  source_view.rs  utils.rs
crates/sourcemap/tests/: conformance.rs
crates/symbolicate/: Cargo.toml  README.md
crates/symbolicate/examples/: error_symbolication.rs
crates/symbolicate/src/: lib.rs
docs/: agentic-use-cases.md
docs/superpowers/plans/: 2026-07-13-fix-audit-findings.md  2026-07-13-sweep-security-remediation.md  2026-07-14-fetch-fixture-test-hardening.md  2026-07-14-js-dependencies-fetch-fixture.md  2026-07-14-test-artifact-bootstrap.md
docs/superpowers/specs/: 2026-07-13-audit-findings-design.md  2026-07-13-sweep-security-remediation-design.md  2026-07-14-fetch-fixture-test-hardening-design.md  2026-07-14-js-dependencies-fetch-fixture-design.md  2026-07-14-test-artifact-bootstrap-design.md
examples/: sourcemap-viewer.html
scripts/: release.sh  sync-npm-versions.sh
