[workspace]
resolver = "2"
members = ["crates/*", "packages/codec", "packages/sourcemap", "packages/sourcemap-wasm", "packages/generator-wasm", "packages/remapping-wasm", "packages/symbolicate-wasm", "packages/scopes-wasm", "packages/generator", "packages/remapping"]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/bartwaardenburg/srcmap"

[workspace.dependencies]
srcmap-codec = { version = "0.1.3", path = "crates/codec" }
srcmap-sourcemap = { version = "0.1.3", path = "crates/sourcemap" }
srcmap-generator = { version = "0.1.3", path = "crates/generator" }
srcmap-remapping = { version = "0.1.3", path = "crates/remapping" }
srcmap-scopes = { version = "0.1.3", path = "crates/scopes" }
srcmap-symbolicate = { version = "0.1.3", path = "crates/symbolicate" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
