[workspace]
resolver = "2"
members = ["crates/*", "packages/codec", "packages/sourcemap", "packages/sourcemap-wasm", "packages/generator-wasm", "packages/remapping-wasm", "packages/symbolicate-wasm", "packages/scopes-wasm", "packages/generator", "packages/remapping"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/BartWaardenburg/srcmap"

[workspace.dependencies]
srcmap-codec = { version = "0.2.0", path = "crates/codec" }
srcmap-sourcemap = { version = "0.2.0", path = "crates/sourcemap" }
srcmap-generator = { version = "0.2.0", path = "crates/generator" }
srcmap-remapping = { version = "0.2.0", path = "crates/remapping" }
srcmap-scopes = { version = "0.2.0", path = "crates/scopes" }
srcmap-symbolicate = { version = "0.2.0", path = "crates/symbolicate" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
rayon = "1"
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
napi-build = "2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
