[package]
name = "srcmap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool to inspect, validate, compose, and manipulate source maps"
readme = "README.md"
keywords = ["sourcemap", "source-map", "cli", "devtools", "ecma-426"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "srcmap"
path = "src/main.rs"

[dependencies]
srcmap-codec = { workspace = true }
srcmap-sourcemap = { workspace = true }
srcmap-remapping = { workspace = true }
srcmap-scopes = { workspace = true }
srcmap-symbolicate = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
