[package]
name = "srcmap-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance VLQ source map codec"
readme = "README.md"
keywords = ["sourcemap", "vlq", "codec", "base64", "source-map"]
categories = ["encoding", "development-tools"]

[features]
default = []
parallel = ["rayon"]

[lib]
crate-type = ["lib"]

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "vlq"
harness = false
