[package]
name = "srcmap-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance VLQ source map codec"
readme = "README.md"
keywords = ["sourcemap", "vlq", "codec", "base64", "source-map"]
categories = ["encoding", "development-tools"]

[features]
default = []
parallel = ["rayon"]

[lib]
crate-type = ["lib"]

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "vlq"
harness = false
