[package]
name = "srcmap-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance VLQ source map codec"
readme = "README.md"
keywords = ["sourcemap", "vlq", "codec", "base64", "source-map"]
categories = ["encoding", "development-tools"]

[features]
default = []
codspeed = ["criterion2/codspeed"]
parallel = ["rayon"]

[lib]
crate-type = ["lib"]

[lints]
workspace = true

[dependencies]
memchr = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion2 = { workspace = true }

[[bench]]
name = "vlq"
harness = false

[[bench]]
name = "vlq_parallel"
harness = false
required-features = ["parallel"]
