[package]
name = "srcmap-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance source map generator"
readme = "README.md"
keywords = ["sourcemap", "source-map", "generator", "builder", "ecma-426"]
categories = ["development-tools"]

[features]
default = []
parallel = ["rayon"]

[lib]
crate-type = ["lib"]

[dependencies]
srcmap-codec = { workspace = true }
srcmap-sourcemap = { workspace = true }
srcmap-scopes = { workspace = true }
rayon = { workspace = true, optional = true }
rustc-hash = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "generate"
harness = false
