[package]
name = "srcmap-ram-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "React Native RAM bundle parser for source map tooling"
readme = "README.md"
keywords = ["sourcemap", "ram-bundle", "react-native", "metro"]
categories = ["parser-implementations"]

[dependencies]
srcmap-sourcemap = { workspace = true }
