[package]
name = "srcmap-remapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Source map concatenation and composition/remapping"
readme = "README.md"
keywords = ["sourcemap", "source-map", "remapping", "concatenation", "composition"]
categories = ["development-tools"]

[features]
default = []
codspeed = ["criterion2/codspeed"]

[lib]
crate-type = ["lib"]

[lints]
workspace = true

[dependencies]
srcmap-sourcemap = { workspace = true }
srcmap-generator = { workspace = true }

[dev-dependencies]
criterion2 = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "remap"
harness = false
