[package]
name = "srcmap-sourcemap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance source map parser and consumer"
readme = "README.md"
keywords = ["sourcemap", "source-map", "parser", "consumer", "ecma-426"]
categories = ["parser-implementations", "development-tools"]

[features]
default = []
codspeed = ["criterion2/codspeed"]

[lib]
crate-type = ["lib"]

[lints]
workspace = true

[dependencies]
srcmap-codec = { workspace = true }
srcmap-scopes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
criterion2 = { workspace = true }
simd-json = { workspace = true }
sonic-rs = { workspace = true }

[[bench]]
name = "parse"
harness = false
