[package]
name = "srcmap-symbolicate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stack trace symbolication using source maps"

[dependencies]
srcmap-sourcemap = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
