[package]
name = "srcmap-symbolicate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stack trace symbolication using source maps"

[dependencies]
srcmap-sourcemap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
